--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,5 +1,6 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=5BFC99BD469852A213D925981565B852
+CopyrightNotice=anyone can use this trash
 
 [StartupActions]
 bAddPacks=True
