Custom GameMode BluePrint class created and modified

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,7 +2,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/Maps/newMap.newMap
 GameDefaultMap=/Game/Maps/newMap.newMap
-GlobalDefaultGameMode=/Script/BuildingEscape.BuildingEscapeGameModeBase
+GlobalDefaultGameMode=/Game/CustomGameModeBP.CustomGameModeBP_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
